--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 
                 <h1 id="title">Question 1</h1>
 
-                <form>
+                <form class="form">
                     <div>
-                        <input type="radio" class="js-input" id="fquestion" name="check">
-                        <label for="fquestion">First Question</label>
+                        <input type="radio" value="" class="js-input" id="fquestion" name="check">
+                        <label for="fquestion" id="js-label">First Question</label>
                     </div>
 
                     <div>
-                        <input type="radio" class="js-input" id="squestion" name="check">
-                        <label for="squestion">Second Question</label>
+                        <input type="radio" value="" class="js-input" id="squestion" name="check">
+                        <label for="squestion" id="js-label">Second Question</label>
                     </div>
 
                     <div>
-                        <input type="radio" class="js-input" id="tquestion" name="check">
-                        <label for="tquestion">Third Question</label>
+                        <input type="radio" value="" class="js-input" id="tquestion" name="check">
+                        <label for="tquestion" id="js-label">Third Question</label>
                     </div>
 
                     <input type="submit" value="submit" id="submit">
