--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS Quiz</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
         <section class="content">
 
             <div class="question-box">
-                <div class="js-box active">1</div>
+                <div class="js-box">1</div>
                 <div class="js-box">2</div>
                 <div class="js-box">3</div>
                 <div class="js-box">4</div>
@@ -37,26 +37,33 @@
 
             <div class="content-box">
 
-                <h1 id="title">Question 1</h1>
+                <div class="welcome">
+                    <h1>JavaScript, essentials everybody should know</h1>
+                    <input type="submit" value="Click to Start!" id="submit">
+                </div>
 
-                <form class="form">
-                    <div>
-                        <input type="radio" value="" class="js-input" id="fquestion" name="check">
-                        <label for="fquestion" id="js-label">First Question</label>
-                    </div>
+                <div class="quiz">
+                    <h1 id="title">Question 1</h1>
 
-                    <div>
-                        <input type="radio" value="" class="js-input" id="squestion" name="check">
-                        <label for="squestion" id="js-label">Second Question</label>
-                    </div>
+                    <form class="form">
+                        <div>
+                            <label for="fquestion" id="js-label">First Question</label>
+                        </div>
+    
+                        <div>
+                            <label for="squestion" id="js-label">Second Question</label>
+                        </div>
+    
+                        <div>
+                            <label for="tquestion" id="js-label">Third Question</label>
+                        </div>
+                    </form>
+                </div>
 
-                    <div>
-                        <input type="radio" value="" class="js-input" id="tquestion" name="check">
-                        <label for="tquestion" id="js-label">Third Question</label>
-                    </div>
-
-                    <input type="submit" value="submit" id="submit">
-                </form>
+                <div class="finish">
+                    <h1>Congratulations, you've finished the quiz! <br>its performance was <span id="note">10/10</span></h1>
+                    <input type="submit" value="Restart" id="restart">
+                </div>
 
             </div>
 
@@ -67,7 +74,7 @@
 
     <footer>
 
-        Made by Lucas Cupertino.
+        Made by ⚡️ Lucas Cupertino.
 
     </footer>
 
